# finalfrontier

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  ACCURACY.md  CONTRIBUTORS  Cargo.toml  NOTICE  README.md  build.rs  default.nix  tests.nix
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test.yml
benches/: dot_product.rs
ci/: before_deploy.sh  script.sh
docs/: INSTALL.md  QUICKSTART.md
finalfrontier/: Cargo.toml
finalfrontier-utils/: Cargo.toml
finalfrontier-utils/src/: data.rs  lib.rs  progress.rs  util.rs
finalfrontier/src/: config.rs  dep_trainer.rs  deps.rs  hogwild.rs  idx.rs  io.rs  lib.rs  loss.rs  model.rs  normalization.rs  sampling.rs  sgd.rs  similarity.rs  skipgram_trainer.rs  subword.rs  train_model.rs  util.rs  vec_simd.rs  vocab.rs
finalfrontier/src/vocab/: mod.rs  simple.rs  subword.rs
hogwild/: Cargo.toml
hogwild/src/: lib.rs
man/: Makefile  ff-compute-accuracy.1  ff-compute-accuracy.1.md  ff-convert.1  ff-convert.1.md  ff-deps.1.md  ff-format.5  ff-format.5.md  ff-similar.1  ff-similar.1.md  ff-train-deps.1.md  ff-train-skipgram.1.md  ff-train.1  ff-train.1.md  finalfrontier-deps.1  finalfrontier-deps.1.md  finalfrontier-skipgram.1  finalfrontier-skipgram.1.md  finalfrontier.1  finalfrontier.1.md
nix/: sources.json
src/: app.rs  config.rs  dep_trainer.rs  deps.rs  hogwild.rs  idx.rs  io.rs  lib.rs  loss.rs  main.rs  sampling.rs  sgd.rs  skipgram_trainer.rs  train_model.rs  util.rs  vec_simd.rs
src/subcommands/: config.rs  deps.rs  mod.rs  progress.rs  skipgram.rs  traits.rs
src/vocab/: mod.rs  simple.rs  subword.rs
testdata/: chunking.txt  dep_chunking.txt
