[package]
name = "finalfrontier"
version = "0.9.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>", "Sebastian Pütz <seb.puetz@gmail.com>"]
description = "Train/use word embeddings with subword units"
documentation = "https://docs.rs/finalfrontier/"
homepage = "https://finalfusion.github.io/finalfrontier"
repository = "https://github.com/finalfusion/finalfrontier.git"
license = "Apache-2.0 OR BlueOak-1.0.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "2"
conllu = "0.6"
finalfusion = "0.14"
fnv = "1"
indicatif = "0.15"
memmap = "0.7"
ndarray = "0.13"
ndarray-rand = "0.11"
num_cpus = "1"
rand = "0.7"
rand_core = "0.6"
rand_xorshift = "0.2"
serde = { version = "1", features = ["derive"] }
superslice = "1.0"
toml = "0.5"
udgraph = "0.6"
udgraph-projectivize = "0.6"
zipf = "6"

[build-dependencies]
git2 = "0.13"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
