[package]
name = "finalfrontier-utils"
version = "0.5.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Train and use word embeddings with subword representations"
documentation = "https://finalfusion.github.io/finalfrontier"
homepage = "https://github.com/finalfusion/finalfrontier"
repository = "https://github.com/finalfusion/finalfrontier.git"
license = "Apache-2.0"

[dependencies]
clap = "2"
conllx = "0.11"
failure = "0.1"
finalfrontier = { path = "../finalfrontier", version = "0.5.0" }
indicatif = "0.11"
memmap = "0.7"
num_cpus = "1"
rand = "0.6"
rand_xorshift = "0.1"
stdinout = "0.4"
serde = { version = "1", features = ["derive"] }
