[package]
name = "finalfrontier"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Train/use word embeddings with subword units"
documentation = "https://docs.rs/finalfrontier/"
homepage = "https://github.com/danieldk/finalfrontier"
repository = "https://github.com/danieldk/finalfrontier.git"
license = "Apache-2.0"

[dependencies]
byteorder = "1"
cfg-if = "0.1"
conllx = "0.11"
failure = "0.1"
fnv = "1"
hogwild = { path = "../hogwild", version = "0.2.0" }
memmap = "0.7"
ndarray = "0.12"
ndarray-rand = "0.9"
ordered-float = "1"
rand = "0.6"
rand_core = "0.3"
rust2vec = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.4"
zipf = "5"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
rand_xorshift = "0.1"
