[package]
name = "finalfrontier"
version = "0.4.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Train/use word embeddings with subword units"
documentation = "https://docs.rs/finalfrontier/"
homepage = "https://github.com/danieldk/finalfrontier"
repository = "https://github.com/danieldk/finalfrontier.git"
license = "Apache-2.0"

[dependencies]
cfg-if = "0.1"
conllx = "0.11"
failure = "0.1"
finalfusion = "0.5"
fnv = "1"
hogwild = { path = "../hogwild", version = "0.4.0" }
ndarray = "0.12"
ndarray-rand = "0.9"
rand = "0.6"
rand_core = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.4"
zipf = "5"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
rand_xorshift = "0.1"
