[package]
name = "hogwild"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Data types for hogwild SGD"
documentation = "https://docs.rs/hogwild/"
homepage = "https://github.com/danieldk/finalfrontier"
repository = "https://github.com/danieldk/finalfrontier.git"
license = "Apache-2.0"

[dependencies]
ndarray = "0.12"
